--- a/Oil_Production_Prediction.ipynb
+++ b/Oil_Production_Prediction.ipynb
@@ -14234,8 +14234,9 @@
         "ax.axhspan(0, ax.get_ylim()[1], facecolor='w', alpha=0.2)\n",
         "ax.axhspan(ax.get_ylim()[0], 0, facecolor='w', alpha=0.2)\n",
         "\n",
-        "# Set the limits of the y-axis to be centered at 0\n",
-        "ax.set_ylim([-1, 1])\n"
+        "## Set the limits of the y-axis to be centered at 0\n",
+        "ax.set_ylim([-1, 1])\n",
+        "\n"
       ]
     },
     {
