made some edits for readability

--- a/Oil_Production_Prediction.ipynb
+++ b/Oil_Production_Prediction.ipynb
@@ -14099,7 +14099,7 @@
       },
       "outputs": [],
       "source": [
-        "#the stacking regressor at the competition time gave a result that was a little better randomforest, I think 172."
+        "#the stacking regressor gave a result that was a little better randomforest"
       ]
     },
     {
@@ -19343,7 +19343,7 @@
         "\n",
         "# Print the best hyperparameters and score\n",
         "print('Best hyperparameters: {}'.format(best_params))\n",
-        "print('Best score: {:.2f}'.format(-best_score))"
+        "print('Best score: {:.2f}'.format(best_score))"
       ]
     },
     {
@@ -19385,28 +19385,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "background_save": true
-        },
-        "id": "cVIQTw6OxQ8m"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "background_save": true
-        },
-        "id": "b0p9Cnk6N-iG"
-      },
-      "outputs": [],
-      "source": []
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "AT THE END OF THE ANALYSIS THE STACKING REGRESSOR GAVE THE BEST RESULTS:                                                                         \n",
+        "MAE - 172.4                                                                                                                            &  R2SCORE - 97.5%"
+      ]
     }
   ],
   "metadata": {
